k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: devsu-demo
  namespace: devsu
spec:
  selector:
    app: devsu-demo
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
